--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">BazarApp_1</string>
+    <string name="default_web_client_id">1:489741819367:android:fb2fe8095ab30fd79d3142</string>
 </resources>
