Updated for google functionalities

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">BazarApp_1</string>
-    <string name="default_web_client_id">1:489741819367:android:fb2fe8095ab30fd79d3142</string>
+<string name="web_client_id">489741819367-pm0piol4mm9v1rmbks5htf731acql0ba.apps.googleusercontent.com</string>
 </resources>
+
+
+    <!--489741819367-pm0piol4mm9v1rmbks5htf731acql0ba.apps.googleusercontent.com-->
